# python-junit-xml-typed

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
junit_xml/: __init__.py
tests/: asserts.py  serializer.py  test_test_case.py  test_test_suite.py
